# aed1_2023

./: CMakeLists.txt  aed1_lp1_2223_proj_part1_chars.h  main.c  projeto.c  projeto.h
